--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "rm -rf docs && react-scripts build && mv build docs",
+    "build": "rm -rf docs && react-scripts build && mv build docs && echo shrekpartycountdown.com > docs/CNAME",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
