--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start": "react-scripts start",
     "build": "rm -rf docs && react-scripts build && mv build docs && echo shrekpartycountdown.com > docs/CNAME",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && git commit -am 'publish' && git push origin master"
   },
   "eslintConfig": {
     "extends": "react-app"
